user dialogs, action permissions

--- a/messaging-portlet-api/src/main/resources/content/Language.properties
+++ b/messaging-portlet-api/src/main/resources/content/Language.properties
@@ -20,6 +20,11 @@ removeConfirmation=Delete it?
 language=Language
 toClose=Close
 number=Registration number
+view=View
+
+#actions
+action.CREATE_MSG=Create message
+action.CREATE_DIALOG=Create message
 
 #simple errors
 other.errors=Hidden errors count %s
