--- a/messaging-portlet-api/src/main/resources/content/Language.properties
+++ b/messaging-portlet-api/src/main/resources/content/Language.properties
@@ -21,6 +21,7 @@ language=Language
 toClose=Close
 number=Registration number
 view=View
+you=You
 
 #actions
 action.CREATE_MSG=Create message
@@ -40,3 +41,5 @@ messaging.topic=Topic
 messaging.text=Message
 messaging.empty=No message
 messaging.reply=Reply
+
+messaging.error.messageCreation=Message creation error
