email notifications, mailout

--- a/messaging-portlet-api/src/main/resources/content/Language.properties
+++ b/messaging-portlet-api/src/main/resources/content/Language.properties
@@ -31,6 +31,11 @@ action.CREATE_DIALOG=Create message
 other.errors=Hidden errors count %s
 permission.error=User has no permissions
 
+#email
+mail.topic=New message on russiaeasy.org
+mail.text=You received a message on russiaeasy.org
+mail.footer=Sincerely yours, russiaeasy.org team
+
 #messaging
 messaging=Messaging
 messaging.dialog=Dialog
@@ -39,6 +44,7 @@ messaging.createDialog=Create message
 messaging.receiver=Receiver
 messaging.topic=Topic
 messaging.text=Message
+messaging.sender=Sender
 messaging.empty=No message
 messaging.reply=Reply
 
