--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 buildscript {
 	dependencies {
 		classpath group: "com.liferay", name: "com.liferay.gradle.plugins", version: "3.1.3"
+		classpath 'org.hidetake:gradle-ssh-plugin:1.1.1'
 	}
 
 	repositories {
