update external creation link

--- a/messaging-portlet-api/src/main/resources/content/Language.properties
+++ b/messaging-portlet-api/src/main/resources/content/Language.properties
@@ -44,8 +44,8 @@ messaging.createDialog=Create message
 messaging.receiver=Receiver
 messaging.topic=Topic
 messaging.text=Message
-messaging.sender=Sender
 messaging.empty=No message
 messaging.reply=Reply
+messaging.sender=
 
 messaging.error.messageCreation=Message creation error
